--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@vadzim/module",
-  "version": "0.0.1",
+  "name": "@vadzim/wait",
+  "version": "0.0.0",
   "description": "description",
   "keywords": [],
-  "repository": "https://github.com/vadzim/module",
+  "repository": "https://github.com/vadzim/wait",
   "bugs": {
-    "url": "https://github.com/vadzim/module/issues"
+    "url": "https://github.com/vadzim/wait/issues"
   },
   "contributors": [],
-  "main": "distr/module.js",
+  "main": "distr/wait.js",
   "author": "Vadzim Zieńka <developer@vadzim.info>",
   "scripts": {
     "build": "flow && (rm distr/*; true) && babel source --out-dir distr && cd distr && (for f in $(find | grep -E '.js$'); do if grep @flow ../source/$f >/dev/null; then cp ../source/$f $f.flow; fi; done) && cd ..",
@@ -21,17 +21,18 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-idx": "^2.0.0",
+    "babel-plugin-idx": "^2.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
-    "flow-bin": "^0.57.3",
-    "idx": "^2.1.0",
+    "flow-bin": "^0.59.0",
+    "idx": "^2.2.0",
     "jest": "^21.2.1",
-    "prettier": "^1.7.4"
+    "prettier": "^1.8.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "commander": "^2.11.0"
   }
 }
